--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,45 +1,31 @@
-[tool.poetry]
-name = "SuperSeriousBot"
-version = "2.0.0"
-description = ""
-authors = ["Ayaan Zaidi <hi@obviy.us>"]
-license = "MIT"
+[project]
+name = "superseriousbot"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "aiohttp>=3.10.10",
+    "aiosqlite>=0.17.0",
+    "asyncpraw>=7.7.1",
+    "beautifulsoup4>=4.12.3",
+    "caribou>=0.4.1",
+    "coloredlogs>=15.0.1",
+    "dateparser>=1.2.0",
+    "geopy>=2.4.1",
+    "howlongtobeatpy>=1.0.8",
+    "ijson>=3.3.0",
+    "litellm>=1.49.1",
+    "networkx>=3.4.1",
+    "pydantic>=2.9.2",
+    "python-telegram-bot[job-queue,rate-limiter,webhooks]>=21.6",
+    "pyvis>=0.3.2",
+    "redis>=5.1.1",
+    "redvid>=2.0.5",
+    "spurdify>=0.3.0",
+    "translatepy>=2.3",
+    "uwuify>=1.3.1",
+    "yt-dlp>=2024.10.7",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-Cerberus = "^1.3.5"
-redvid = "^2.0.5"
-python-telegram-bot = { version = "^21.5", extras = [
-    "rate-limiter",
-    "job-queue",
-    "webhooks",
-] }
-yt-dlp = "^2024.8.6"
-asyncpraw = "^7.7.1"
-dateparser = "^1.2.0"
-coloredlogs = "^15.0.1"
-howlongtobeatpy = "^1.0.8"
-spurdify = "^0.3.0"
-uwuify = "^1.3.1"
-geopy = "^2.4.1"
-pyvis = "^0.3.2"
-networkx = "^3.3"
-rotten-tomatoes-client = "^0.0.3"
-beautifulsoup4 = "^4.12.3"
-cinemagoer = { git = "https://github.com/cinemagoer/cinemagoer" }
-async-lru = "^2.0.4"
-aiosqlite = "0.17.0"
-ijson = "^3.3.0"
-litellm = "^1.46.1"
-deep-translator = "^1.11.4"
-translatepy = "^2.3"
-aiohttp = "^3.10.5"
-caribou = "^0.3.0"
-redis = "^5.0.8"
-pyrogram = "^2.0.106"
-tgcrypto = "^1.2.5"
-youtube-transcript-api = "^0.6.2"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.uv.sources]
