--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,9 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
@@ -26,25 +26,18 @@ jobs:
   publish:
     name: Build Docker Image    
     runs-on: ubuntu-latest
+    needs: release
     permissions:
       packages: write
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
       - name: Set up Docker Buildx
-        id: builder
         uses: docker/setup-buildx-action@v3
-
-      - name: "Append ARM buildx builder"
-        uses: baschny/append-buildx-action@v1
         with:
-          builder: ${{ steps.builder.outputs.name }}
-          endpoint: "ssh://ubuntu@140.238.243.7"
-          ssh_private_key: ${{ secrets.ARM64_RUNNER_SSH_PRIVATE_KEY }}
+          platforms: linux/amd64,linux/arm64
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -65,3 +58,4 @@ jobs:
             ghcr.io/obviyus/superseriousbot:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          provenance: false
