--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,30 +5,29 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "aiohttp>=3.11.6",
-    "aiosqlite>=0.17.0",
-    "async-lru>=2.0.4",
-    "asyncpraw>=7.8.0",
-    "beautifulsoup4>=4.12.3",
+    "aiohttp>=3.12.13",
+    "aiosqlite>=0.21.0",
+    "async-lru>=2.0.5",
+    "beautifulsoup4>=4.13.4",
     "caribou>=0.4.1",
     "coloredlogs>=15.0.1",
-    "dateparser>=1.2.0",
+    "dateparser>=1.2.1",
     "deep-translator>=1.11.4",
     "geopy>=2.4.1",
-    "howlongtobeatpy>=1.0.11",
-    "ijson>=3.3.0",
-    "litellm>=1.52.12",
-    "networkx>=3.4.2",
-    "pydantic>=2.10.0",
-    "python-dotenv>=1.0.1",
-    "python-telegram-bot[job-queue,rate-limiter,webhooks]>=21.7",
+    "howlongtobeatpy>=1.0.18",
+    "ijson>=3.4.0",
+    "litellm>=1.73.0",
+    "networkx>=3.5",
+    "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
+    "python-telegram-bot>=22.1",
     "pyvis>=0.3.2",
     "redis>=5.2.0",
-    "requests>=2.32.3",
+    "requests>=2.32.4",
     "spurdify>=0.3.0",
     "translatepy>=2.3",
     "uwuify>=1.3.1",
-    "yt-dlp>=2024.11.18",
+    "yt-dlp>=2025.6.9",
 ]
 
 [tool.uv.sources]
