--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,23 +11,23 @@ dependencies = [
     "beautifulsoup4>=4.13.4",
     "caribou>=0.4.1",
     "coloredlogs>=15.0.1",
-    "dateparser>=1.2.1",
+    "dateparser>=1.2.2",
     "deep-translator>=1.11.4",
     "geopy>=2.4.1",
     "howlongtobeatpy>=1.0.18",
     "ijson>=3.4.0",
-    "litellm>=1.73.0",
+    "litellm>=1.73.6",
     "networkx>=3.5",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
-    "python-telegram-bot>=22.1",
+    "python-telegram-bot[job-queue,rate-limiter,webhooks]>=22.2",
     "pyvis>=0.3.2",
     "redis>=5.2.0",
     "requests>=2.32.4",
     "spurdify>=0.3.0",
     "translatepy>=2.3",
     "uwuify>=1.3.1",
-    "yt-dlp>=2025.6.9",
+    "yt-dlp>=2025.6.30",
 ]
 
 [tool.uv.sources]
