--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "gtts>=2.5.4",
     "howlongtobeatpy>=1.0.18",
     "ijson>=3.4.0",
-    "litellm~=1.75.2",
+    "litellm[proxy]~=1.75.7",
     "networkx>=3.5",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
@@ -27,7 +27,7 @@ dependencies = [
     "requests>=2.32.4",
     "spurdify>=0.3.0",
     "uwuify>=1.3.1",
-    "yt-dlp~=2025.7.21",
+    "yt-dlp~=2025.8.11",
 ]
 
 [tool.uv.sources]
