--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,17 +17,16 @@ dependencies = [
     "gtts>=2.5.4",
     "howlongtobeatpy>=1.0.18",
     "ijson>=3.4.0",
-    "litellm[proxy]~=1.75.7",
+    "litellm[proxy]~=1.75.8",
     "networkx>=3.5",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.3",
-    "pyvis>=0.3.2",
     "redis>=5.2.0",
-    "requests>=2.32.4",
+    "requests~=2.32.5",
     "spurdify>=0.3.0",
     "uwuify>=1.3.1",
-    "yt-dlp~=2025.8.11",
+    "yt-dlp~=2025.8.20",
 ]
 
 [tool.uv.sources]
