--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,28 +5,42 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "aiohttp~=3.12.15",
-    "aiosqlite>=0.21.0",
-    "async-lru>=2.0.5",
-    "beautifulsoup4>=4.13.4",
-    "caribou>=0.4.1",
-    "coloredlogs>=15.0.1",
-    "dateparser>=1.2.2",
-    "geopy>=2.4.1",
-    "googletrans>=4.0.2",
-    "gtts>=2.5.4",
-    "howlongtobeatpy>=1.0.18",
-    "ijson>=3.4.0",
-    "litellm[proxy]~=1.75.8",
-    "networkx>=3.5",
-    "pydantic>=2.11.7",
-    "python-dotenv>=1.1.1",
-    "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.3",
-    "redis>=5.2.0",
-    "requests~=2.32.5",
-    "spurdify>=0.3.0",
-    "uwuify>=1.3.1",
-    "yt-dlp~=2025.8.20",
+  "aiohttp~=3.12.15",
+  "aiosqlite>=0.21.0",
+  "async-lru>=2.0.5",
+  "beautifulsoup4>=4.13.4",
+  "caribou>=0.4.1",
+  "coloredlogs>=15.0.1",
+  "dateparser>=1.2.2",
+  "geopy>=2.4.1",
+  "googletrans>=4.0.2",
+  "gtts>=2.5.4",
+  "howlongtobeatpy>=1.0.18",
+  "ijson>=3.4.0",
+  "litellm[proxy]~=1.75.8",
+  "networkx>=3.5",
+  "pydantic>=2.11.7",
+  "python-dotenv>=1.1.1",
+  "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.3",
+  "redis>=5.2.0",
+  "requests~=2.32.5",
+  "spurdify>=0.3.0",
+  "uwuify>=1.3.1",
+  "yt-dlp~=2025.8.20",
 ]
 
-[tool.uv.sources]
+
+[tool.ruff.lint]
+select = [
+  "E",     # pycodestyle errors
+  "F",     # pyflakes
+  "W",     # pycodestyle warnings
+  "I",     # isort
+  "UP",    # pyupgrade (auto-fixable)
+  "ASYNC", # async best practices
+  "B",     # bugbear
+  "RUF",   # ruff-specific
+]
+ignore = [
+  "E501", # line length (handled by formatter/line-length)
+]
