--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
   "aiohttp~=3.12.15",
   "aiosqlite>=0.21.0",
   "async-lru>=2.0.5",
-  "beautifulsoup4>=4.13.4",
+  "beautifulsoup4~=4.13.5",
   "caribou>=0.4.1",
   "coloredlogs>=15.0.1",
   "dateparser>=1.2.2",
@@ -26,7 +26,7 @@ dependencies = [
   "requests~=2.32.5",
   "spurdify>=0.3.0",
   "uwuify>=1.3.1",
-  "yt-dlp~=2025.8.20",
+  "yt-dlp~=2025.9.5",
 ]
 
 
