--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
   "aiohttp~=3.12.15",
   "aiosqlite>=0.21.0",
   "async-lru>=2.0.5",
-  "beautifulsoup4~=4.13.5",
+  "beautifulsoup4~=4.14.2",
   "caribou>=0.4.1",
   "coloredlogs>=15.0.1",
   "dateparser>=1.2.2",
@@ -16,17 +16,17 @@ dependencies = [
   "googletrans>=4.0.2",
   "gtts>=2.5.4",
   "howlongtobeatpy>=1.0.18",
-  "ijson>=3.4.0",
-  "litellm[proxy]~=1.77.1",
+  "ijson~=3.4.0.post0",
+  "litellm[proxy]~=1.78.6",
   "networkx>=3.5",
-  "pydantic~=2.11.9",
+  "pydantic~=2.12.3",
   "python-dotenv>=1.1.1",
-  "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.4",
+  "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.5",
   "redis>=5.2.0",
   "requests~=2.32.5",
   "spurdify>=0.3.0",
   "uwuify>=1.3.1",
-  "yt-dlp~=2025.9.5",
+  "yt-dlp~=2025.10.14",
 ]
 
 
