--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,31 +3,30 @@ name = "superseriousbot"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.13"
 dependencies = [
   "aiohttp~=3.13.2",
   "aiosqlite>=0.21.0",
   "async-lru>=2.0.5",
-  "beautifulsoup4~=4.14.2",
+  "beautifulsoup4~=4.14.3",
   "caribou>=0.4.1",
   "coloredlogs>=15.0.1",
   "dateparser>=1.2.2",
   "geopy>=2.4.1",
   "googletrans>=4.0.2",
   "gtts>=2.5.4",
-  "howlongtobeatpy>=1.0.18",
+  "howlongtobeatpy~=1.0.19",
   "ijson~=3.4.0.post0",
-  "litellm[proxy]~=1.80.0",
-  "networkx>=3.5",
-  "pydantic~=2.12.4",
+  "litellm[proxy]~=1.80.7",
+  "networkx~=3.6",
+  "pydantic~=2.12.5",
   "python-dotenv~=1.2.1",
   "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.5",
-  "redis~=7.0.1",
   "requests~=2.32.5",
   "spurdify>=0.3.0",
   "uwuify>=1.3.1",
   "yt-dlp~=2025.11.12",
-  "telegramify-markdown>=0.1.0",
+  "telegramify-markdown~=0.5.2",
 ]
 
 
